# squad_sync

./: .eslintrc.js  .gitignore  .prettierignore  LICENSE  README.md  audit_report_partykit.md  clippy_output.txt  clippy_output_2.txt  developer_guide.md  eslint.config.js  file_operations_report.md  package.json  phases.md  pnpm-lock.yaml  sync_migration.md  sync_migration_backup.md  technical_specification.md  tsconfig.json  turbo.json
.agent/rules/: ddagrab.md
.agent/workflows/: build.md  deploy.md
.github/workflows/: ci.yml
apps/desktop/: .env.example  .env.production  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
apps/desktop/scripts/: setup-ffmpeg.js
apps/desktop/src-tauri/: Cargo.toml  build_log.txt  build_log_3.txt  check_error.txt  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: audio.rs  config.rs  constants.rs  error.rs  job_object.rs  lib.rs  main.rs  ntp.rs  state.rs
apps/desktop/src-tauri/src/commands/: clip.rs  config.rs  devices.rs  mod.rs  monitors.rs  playback.rs  recording.rs  replay.rs  replay_test.rs  system.rs  upload.rs
apps/desktop/src-tauri/src/ffmpeg/: commands.rs  encoder.rs  mod.rs  monitor.rs  process.rs  process_helper.rs  session.rs  utils.rs
apps/signaling/: package.json  partykit.json  tsconfig.json
apps/web/: next.config.ts  package.json  tsconfig.json
docs/: product_identity.md
plugins/: README.md
scripts/: local-ci.ps1  verify-clip-trigger.ts  verify-signaling.ts
(+35 files in other folders)
