[package]
name = "squad_sync"
version = "0.1.0"
description = "SquadSync Desktop App"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-http = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.8"
chrono = "0.4.42"
regex = "1"
cpal = "0.15"
thiserror = "1"
tokio = { version = "1", features = ["sync", "net", "io-util", "rt-multi-thread"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
